# mess_menu_web_miniproject

./: .env.example  README.md  app.py  init_db.py  main.py  models.py  pyproject.toml  routes.py  run_app.bat  run_app.sh  setup.py  utils.py
static/css/: custom.css
static/js/: charts.js  main.js  validation.js
static/js/react/: DashboardApp.jsx  FoodSuggestionsCard.js  MessPreferenceCard.js  StudentInfoCard.js  view_menu.js
static/js/react/components/: FoodSuggestionsCard.jsx  MessPreferenceCard.jsx  QuickLinksCard.jsx  StudentInfoCard.jsx  view_menu.jsx
templates/: admin.html  dashboard.html  food_suggestion.html  index.html  layout.html  login.html  register.html  report.html
