[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "reportlab>=4.3.1",
    "xlsxwriter>=3.2.2",
    "sqlalchemy>=2.0.40",
    "werkzeug>=3.1.3",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.0",
    "setuptools>=78.1.0",
]
